# rfid-trucking

./: .gitignore  CMakeLists.txt
include/config/: AppConfig.hpp
include/core/: AppContainer.hpp  MqttGateway.hpp
include/db/: Database.hpp
include/handlers/: IMesssageHandler.hpp  TruckCycle.hpp
include/models/: Checkpoint.hpp
include/mqtt/: MqttReader.hpp  TopicDispatcher.hpp
include/repo/: CheckpointRepo.hpp
include/services/: CheckpointService.hpp
include/ui/: Dashboard.hpp  LogBox.hpp  MessageStore.hpp
include/ui/panels/: CheckpointSettingPanel.hpp  CheckpointTablePanel.hpp  HeaderPanel.hpp  LogsPanel.hpp  MetricsPanel.hpp  SystemSettingPanel.hpp
include/utils/: Logger.hpp
src/: main.cpp
src/config/: AppConfig.cpp
src/core/: AppContainer.cpp  MqttGateway.cpp
src/db/: Database.cpp
src/handlers/: TruckCycle.cpp
src/mqtt/: MqttReader.cpp  TopicDispatcher.cpp
src/repo/: CheckpointRepo.cpp
src/services/: CheckpointService.cpp
src/ui/: Dashboard.cpp  LogBox.cpp  MessageStore.cpp
src/ui/panels/: CheckpointSettingPanel.cpp  CheckpointTablePanel.cpp  HeaderPanel.cpp  LogsPanel.cpp  MetricsPanel.cpp  SystemSettingPanel.cpp
src/utils/: Logger.cpp
